<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">QWatch Pro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brvah_load_complete" />
    <string name="brvah_load_end" />
    <string name="brvah_load_failed" />
    <string name="brvah_loading" />
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="china_qwatch_pro_1">不同意</string>
    <string name="china_qwatch_pro_2">同意</string>
    <string name="china_qwatch_pro_3">用户协议和隐私申明</string>
    <string name="china_qwatch_pro_4">用户协议</string>
    <string name="china_qwatch_pro_5">隐私申明</string>
    <string name="china_qwatch_pro_6">欢迎使用！为了保护您的隐私和使用安全，请仔细阅读我们的用户协议和隐私申明。在确认您完全理解并同意之前，请不要使用此应用程序。谢谢！</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_rotate_left">Rotate counterclockwise</string>
    <string name="crop_image_menu_rotate_right">Spin</string>
    <string name="cv_app_name">CalendarView</string>
    <string name="default_web_client_id">681190209674-amin46infrhmv4v32nctdj9vjcl18mop.apps.googleusercontent.com</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fri">Fri</string>
    <string name="gcm_defaultSenderId">681190209674</string>
    <string name="google_api_key">AIzaSyAPXfLmyJU8dyzD_N8Hdfg3VAP4k48jJhM</string>
    <string name="google_app_id">1:681190209674:android:6387a201640eb72f53d573</string>
    <string name="google_crash_reporting_api_key">AIzaSyAPXfLmyJU8dyzD_N8Hdfg3VAP4k48jJhM</string>
    <string name="google_storage_bucket">qwatchpro.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="lewear_text_1">Brand</string>
    <string name="lewear_text_2">Customized watch face</string>
    <string name="lewear_text_3">Wallpaper details</string>
    <string name="lewear_text_4">Failed to obtain remote wallpaper, please check the mobile network or try again</string>
    <string name="lewear_text_5">Failed to obtain remote theme, please check the mobile network or try again</string>
    <string name="lewear_text_6">Restore default</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mon">Mon</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="qc_text_114">Deep sleep</string>
    <string name="qc_text_115">Light sleep</string>
    <string name="qc_text_116">Awake</string>
    <string name="qc_text_119">Reference:6~10h</string>
    <string name="qc_text_120">Deep sleep continuity</string>
    <string name="qc_text_121">Reference:70~100</string>
    <string name="qc_text_123">Reference:20~60%</string>
    <string name="qc_text_125">Reference:50%</string>
    <string name="qc_text_130">%</string>
    <string name="qc_text_142">Nickname</string>
    <string name="qc_text_143">Gender</string>
    <string name="qc_text_144">Birthday</string>
    <string name="qc_text_145">Height</string>
    <string name="qc_text_146">Weight</string>
    <string name="qc_text_202">Mon</string>
    <string name="qc_text_203">Tue</string>
    <string name="qc_text_204">Wed</string>
    <string name="qc_text_205">Thur</string>
    <string name="qc_text_206">Fri</string>
    <string name="qc_text_207">Sat</string>
    <string name="qc_text_208">Sun</string>
    <string name="qc_text_209">Score</string>
    <string name="qc_text_210">Average sleep duration</string>
    <string name="qc_text_211">Average deep sleep percentage</string>
    <string name="qc_text_212">Average light sleep percentage</string>
    <string name="qc_text_227">sign out</string>
    <string name="qc_text_279">Do you want to end this exercise?</string>
    <string name="qc_text_46">Confirm</string>
    <string name="qc_text_47">Cancel</string>
    <string name="qc_text_472">The device analyzes changes in physical activity to estimate your sleep time and sleep status. Sleep data can help you understand, manage your sleep habits and improve sleep quality. Good sleep can not only help the human body recover physical strength, enhance resistance, promote human metabolism, but also be good for mental health. \nPlease note that this feature is not designed for medical use, please consult a healthcare professional if you have any questions or health concerns.</string>
    <string name="qc_text_508">Cancel account</string>
    <string name="qc_text_80103">Rapid Eye Movement</string>
    <string name="qc_text_90">h</string>
    <string name="qc_text_91">min</string>
    <string name="qc_text_92">GPS running</string>
</resources>