<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/ll_week"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:minHeight="40dp">
    <TextView
        android:textSize="@dimen/qc_sp_8"
        android:textColor="@color/menstruation_common_1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/qc_text_208"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/qc_sp_8"
        android:textColor="@color/menstruation_common_1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/qc_text_202"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/qc_sp_8"
        android:textColor="@color/menstruation_common_1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/qc_text_203"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/qc_sp_8"
        android:textColor="@color/menstruation_common_1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/qc_text_204"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/qc_sp_8"
        android:textColor="@color/menstruation_common_1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/qc_text_205"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/qc_sp_8"
        android:textColor="@color/menstruation_common_1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/qc_text_206"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/qc_sp_8"
        android:textColor="@color/menstruation_common_1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/qc_text_207"
        android:layout_weight="1"/>
</merge>
