<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.qcwireless.qcwatch.ui.base.view.QDateWeekSwitchView
            android:id="@+id/qc_date_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="@dimen/qc_sp_14"
            android:textColor="@color/sleep_select_time"
            android:id="@+id/tv_sleep_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qc_date_change"/>
        <TextView
            android:id="@+id/top_bg_1"
            android:background="@drawable/bg_rect_ffffff_corner_12"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/qc_dp_26"
            android:layout_marginTop="@dimen/qc_dp_10"
            android:layout_marginRight="@dimen/qc_dp_26"
            app:layout_constraintTop_toBottomOf="@+id/tv_sleep_range"/>
        <TextView
            android:textSize="@dimen/qc_sp_50"
            android:textColor="@color/sleep_type_value"
            android:id="@+id/tv_sleep_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_bg_1"/>
        <TextView
            android:textSize="@dimen/qc_sp_14"
            android:textColor="@color/sleep_type_text"
            android:id="@+id/tv_sleep_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/qc_dp_10"
            android:layout_marginBottom="@dimen/qc_dp_10"
            android:text="h"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sleep_min"
            app:layout_constraintRight_toLeftOf="@+id/tv_sleep_min"/>
        <TextView
            android:textSize="@dimen/qc_sp_50"
            android:textColor="@color/sleep_type_value"
            android:id="@+id/tv_sleep_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            app:layout_constraintRight_toLeftOf="@+id/tv_sleep_type"
            app:layout_constraintTop_toTopOf="@+id/top_bg_1"/>
        <TextView
            android:textSize="@dimen/qc_sp_14"
            android:textColor="@color/sleep_type_unit"
            android:id="@+id/tv_sleep_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qc_dp_10"
            android:layout_marginBottom="@dimen/qc_dp_10"
            android:text="@string/qc_text_91"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sleep_min"
            app:layout_constraintLeft_toRightOf="@+id/tv_sleep_min"/>
        <TextView
            android:textSize="@dimen/qc_sp_8"
            android:textColor="@color/sleep_common_1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:id="@+id/tv_sleep_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qc_dp_10"
            android:maxWidth="@dimen/qc_dp_120"
            android:text="@string/qc_text_115"
            android:drawableLeft="@mipmap/light_sleep_icon"
            android:drawablePadding="@dimen/qc_dp_5"
            app:layout_constraintLeft_toRightOf="@+id/tv_sleep_deep"
            app:layout_constraintRight_toLeftOf="@+id/tv_sleep_rapid"
            app:layout_constraintTop_toBottomOf="@+id/tv_sleep_unit"/>
        <TextView
            android:textSize="@dimen/qc_sp_8"
            android:textColor="@color/sleep_common_1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:id="@+id/tv_sleep_deep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qc_dp_10"
            android:maxWidth="@dimen/qc_dp_120"
            android:text="@string/qc_text_114"
            android:drawableLeft="@mipmap/deep_sleep_icon"
            android:drawablePadding="@dimen/qc_dp_5"
            android:layout_marginStart="@dimen/qc_dp_26"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_sleep_light"
            app:layout_constraintTop_toBottomOf="@+id/tv_sleep_unit"/>
        <TextView
            android:textSize="@dimen/qc_sp_8"
            android:textColor="@color/sleep_common_1"
            android:ellipsize="marquee"
            android:id="@+id/tv_sleep_rapid"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qc_dp_10"
            android:text="@string/qc_text_80103"
            android:drawableLeft="@mipmap/rapid_sleep_icon"
            android:drawablePadding="@dimen/qc_dp_5"
            app:layout_constraintLeft_toRightOf="@+id/tv_sleep_light"
            app:layout_constraintRight_toLeftOf="@+id/tv_sleep_awake"
            app:layout_constraintTop_toBottomOf="@+id/tv_sleep_unit"/>
        <TextView
            android:textSize="@dimen/qc_sp_8"
            android:textColor="@color/sleep_common_1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:id="@+id/tv_sleep_awake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qc_dp_10"
            android:maxWidth="@dimen/qc_dp_120"
            android:text="@string/qc_text_116"
            android:drawableLeft="@mipmap/awake_sleep_icon"
            android:drawablePadding="@dimen/qc_dp_5"
            android:layout_marginEnd="@dimen/qc_dp_26"
            app:layout_constraintLeft_toRightOf="@+id/tv_sleep_rapid"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sleep_unit"/>
        <com.qcwireless.qcwatch.ui.base.view.QSleepWeekBarView
            android:id="@+id/week_sleep_bar_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/qc_dp_26"
            android:layout_marginRight="@dimen/qc_dp_26"
            app:layout_constraintTop_toBottomOf="@+id/tv_sleep_awake"
            app:qc_bottom_offset="50"
            app:qc_color_ball="@color/q_view_common_4"
            app:qc_color_bg_selected="@color/color_FFFFFF"
            app:qc_color_line="@color/color_FF6A00"
            app:qc_color_value="@android:color/white"
            app:qc_color_value_selected="@color/q_view_common_5"
            app:qc_line_height="180"
            app:qc_text_down_value="@color/q_view_common_1"
            app:qc_unit=""/>
        <com.qcwireless.qcwatch.ui.base.view.QSleepAnalysisView
            android:id="@+id/qc_sleep_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qc_dp_26"
            android:layout_marginRight="@dimen/qc_dp_6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/qc_sleep_2"
            app:layout_constraintTop_toBottomOf="@+id/week_sleep_bar_view"
            app:q_sleep_right_show="true"
            app:q_sleep_subTitle="@string/qc_text_119"
            app:q_sleep_title="@string/qc_text_210"
            app:q_sleep_unit="@string/qc_text_90"/>
        <com.qcwireless.qcwatch.ui.base.view.QSleepAnalysisView
            android:id="@+id/qc_sleep_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qc_dp_6"
            android:layout_marginRight="@dimen/qc_dp_26"
            app:layout_constraintLeft_toRightOf="@+id/qc_sleep_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/week_sleep_bar_view"
            app:q_sleep_subTitle="@string/qc_text_121"
            app:q_sleep_title="@string/qc_text_120"
            app:q_sleep_unit="@string/qc_text_209"/>
        <com.qcwireless.qcwatch.ui.base.view.QSleepAnalysisView
            android:id="@+id/qc_sleep3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qc_dp_26"
            android:layout_marginTop="@dimen/qc_dp_10"
            android:layout_marginRight="@dimen/qc_dp_6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/qc_sleep_4"
            app:layout_constraintTop_toBottomOf="@+id/qc_sleep_2"
            app:q_sleep_subTitle="@string/qc_text_123"
            app:q_sleep_title="@string/qc_text_211"
            app:q_sleep_unit="@string/qc_text_130"/>
        <com.qcwireless.qcwatch.ui.base.view.QSleepAnalysisView
            android:id="@+id/qc_sleep_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qc_dp_6"
            android:layout_marginTop="@dimen/qc_dp_10"
            android:layout_marginRight="@dimen/qc_dp_26"
            app:layout_constraintLeft_toRightOf="@+id/qc_sleep3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qc_sleep_2"
            app:q_sleep_subTitle="@string/qc_text_125"
            app:q_sleep_title="@string/qc_text_212"
            app:q_sleep_unit="@string/qc_text_130"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csl_info_view"
            android:paddingBottom="@dimen/qc_dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qc_dp_26"
            android:layout_marginTop="@dimen/qc_dp_12"
            android:layout_marginRight="@dimen/qc_dp_26"
            android:layout_marginBottom="@dimen/qc_dp_12"
            app:layout_constraintTop_toBottomOf="@+id/qc_sleep_4">
            <TextView
                android:textSize="@dimen/qc_sp_14"
                android:textColor="@color/blood_oxygen_common_1"
                android:id="@+id/tv_info_1"
                android:background="@drawable/bg_rect_ffffff_corner_12"
                android:padding="@dimen/qc_sp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/qc_sp_10"
                android:text="@string/qc_text_472"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
