<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title_bar"
        layout="@layout/layout_title_bar"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/qc_dp_26"
        android:layout_marginRight="@dimen/qc_dp_26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar">
        <com.qcwireless.qcwatch.ui.base.view.QSettingItem
            android:id="@+id/user_center_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/qc_dp_54"
            app:LtextColor="@color/profile_common_1"
            app:isShowRightText="true"
            app:leftText="@string/qc_text_142"
            app:rightStyle="iconShow"
            app:rightText=""
            app:rightTextColor="@color/profile_common_2"/>
        <com.qcwireless.qcwatch.ui.base.view.QSettingItem
            android:id="@+id/user_center_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/qc_dp_54"
            app:LtextColor="@color/profile_common_1"
            app:isShowRightText="true"
            app:leftText="@string/qc_text_143"
            app:rightStyle="iconShow"
            app:rightText=""
            app:rightTextColor="@color/profile_common_2"/>
        <com.qcwireless.qcwatch.ui.base.view.QSettingItem
            android:id="@+id/user_center_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/qc_dp_54"
            app:LtextColor="@color/profile_common_1"
            app:isShowRightText="true"
            app:leftText="@string/qc_text_144"
            app:rightStyle="iconShow"
            app:rightText=""
            app:rightTextColor="@color/profile_common_2"/>
        <com.qcwireless.qcwatch.ui.base.view.QSettingItem
            android:id="@+id/user_center_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/qc_dp_54"
            app:LtextColor="@color/profile_common_1"
            app:isShowRightText="true"
            app:leftText="@string/qc_text_145"
            app:rightStyle="iconShow"
            app:rightText=""
            app:rightTextColor="@color/profile_common_2"/>
        <com.qcwireless.qcwatch.ui.base.view.QSettingItem
            android:id="@+id/user_center_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/qc_dp_54"
            app:LtextColor="@color/profile_common_1"
            app:isShowRightText="true"
            app:leftText="@string/qc_text_146"
            app:rightStyle="iconShow"
            app:rightText=""
            app:rightTextColor="@color/profile_common_2"/>
        <TextView
            android:background="@color/device_setting_line_1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/qc_dp_10"/>
        <com.qcwireless.qcwatch.ui.base.view.QSettingItem
            android:id="@+id/user_log_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/qc_dp_54"
            app:LtextColor="@color/profile_common_1"
            app:isShowRightText="true"
            app:leftText="@string/qc_text_508"
            app:rightStyle="iconShow"
            app:rightText=""
            app:rightTextColor="@color/profile_common_2"/>
    </LinearLayout>
    <TextView
        android:enabled="true"
        android:textColor="@color/profile_btn_text"
        android:gravity="center"
        android:id="@+id/btn_exit"
        android:background="@drawable/sel_btn_user_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qc_dp_26"
        android:layout_marginTop="@dimen/qc_dp_80"
        android:layout_marginRight="@dimen/qc_dp_26"
        android:layout_marginBottom="@dimen/qc_dp_26"
        android:minHeight="@dimen/qc_dp_48"
        android:text="@string/qc_text_227"
        app:layout_constraintBottom_toBottomOf="@+id/layout_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
