<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_rect_corner_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/qc_dp_5"
    android:layout_marginRight="@dimen/qc_dp_5">
    <TextView
        android:textSize="@dimen/qc_sp_14"
        android:textColor="@color/dialog_cancel_text"
        android:id="@+id/tv_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qc_sp_15"
        android:layout_marginTop="@dimen/qc_dp_30"
        android:text="@string/qc_text_47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/qc_sp_14"
        android:textColor="@color/dialog_title_text"
        android:gravity="center"
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qc_dp_30"
        android:text="@string/qc_text_92"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/qc_sp_14"
        android:textColor="@color/dialog_confirm_text"
        android:id="@+id/tv_dialog_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qc_dp_30"
        android:layout_marginRight="@dimen/qc_sp_15"
        android:text="@string/qc_text_46"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/qc_sp_16"
        android:textColor="@color/dialog_content_text"
        android:gravity="left"
        android:id="@+id/tv_content"
        android:padding="@dimen/qc_dp_32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qc_text_279"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_confirm"/>
</androidx.constraintlayout.widget.ConstraintLayout>
